--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -125,41 +125,33 @@ jobs:
             npm i
             npm test
             
-#   scan-frontend:
-#     docker:
-#       - image: circleci/node:13.8.0
-#     steps:
-#       - checkout
-#       - restore_cache:
-#           keys: [my-frontend-cache]
-#       - run:
-#           name: Scan frontend
-#           command: |
-#             cd ./frontend
-#             npm audit --audit-level=critical
-#       - slack/notify:
-#           channel: $SLACK_DEFAULT_CHANNEL
-#           template: basic_fail_1
-#           branch_pattern: .+
-#           event: fail
+  scan-frontend:
+    docker:
+      - image: cimg/node:13.8.0
+    steps:
+      - checkout
+      - restore_cache:
+          keys: [my-frontend-cache]
+      - run:
+          name: Scan frontend
+          command: |
+            cd ./frontend
+            npm i
+            npm audit --audit-level=critical
 
-#   scan-backend:
-#     docker:
-#       - image: circleci/node:13.8.0
-#     steps:
-#       - checkout
-#       - restore_cache:
-#           keys: [my-backend-cache]
-#       - run:
-#           name: Scan backend
-#           command: |
-#             cd ./backend
-#             npm audit --audit-level=critical
-#       - slack/notify:
-#           channel: $SLACK_DEFAULT_CHANNEL
-#           template: basic_fail_1
-#           branch_pattern: .+
-#           event: fail
+  scan-backend:
+    docker:
+      - image: cimg/node:13.8.0
+    steps:
+      - checkout
+      - restore_cache:
+          keys: [my-backend-cache]
+      - run:
+          name: Scan backend
+          command: |
+            cd ./backend
+            npm i
+            npm audit --audit-level=critical
           
 #   deploy-infrastructure:
 #     docker:
@@ -450,10 +442,10 @@ workflows:
           requires: [build-frontend]
       - test-backend:
           requires: [build-backend]
-      # - scan-backend:
-      #     requires: [build-backend]
-      # - scan-frontend:
-      #     requires: [build-frontend]
+      - scan-backend:
+          requires: [build-backend]
+      - scan-frontend:
+          requires: [build-frontend]
       # - deploy-infrastructure:
       #     requires: [test-frontend, test-backend, scan-frontend, scan-backend]
       #     filters:
