--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -137,6 +137,7 @@ jobs:
           command: |
             cd ./frontend
             npm i
+            npm audit fix --force --audit-level=critical
             npm audit --audit-level=critical
 
   scan-backend:
@@ -151,6 +152,8 @@ jobs:
           command: |
             cd ./backend
             npm i
+            npm audit fix --force --audit-level=critical
+            npm audit fix --force --audit-level=critical
             npm audit --audit-level=critical
           
 #   deploy-infrastructure:
