--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,13 +1,14 @@
 version: 2.1
 orbs:
   slack: circleci/slack@4.9.3
+
 commands:
   notify_on_failure:
     steps:
-      slack/notify:
-        event: fail
-        channel: 02-general
-        template: basic_fail_1
+      - slack/notify:
+          event: fail
+          channel: 02-general
+          template: basic_fail_1
   # create-dotenv-file:
   #   description: Create .env file
   #   steps:
