--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,6 +9,25 @@ commands:
           event: fail
           channel: 02-general
           template: basic_fail_1
+  install_aws_cli:
+    description: Install AWS CLI
+    steps: 
+      - run: 
+            name: Install AWS CLI
+            command: |
+                curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+                unzip awscliv2.zip
+                sudo ./aws/install
+  install_ansible:
+    description: Install Ansible
+    steps: 
+      - run: 
+            name: Install Ansible
+            command: |
+                sudo apt update
+                sudo apt install software-properties-common
+                sudo add-apt-repository --yes --update ppa:ansible/ansible
+                sudo apt install ansible
   # create-dotenv-file:
   #   description: Create .env file
   #   steps:
@@ -169,54 +188,44 @@ jobs:
             npm audit --audit-level=critical
       - notify_on_failure
   
-#   deploy-infrastructure:
-#     docker:
-#       - image: amazon/aws-cli
-#     steps:
-#       - checkout
-#       - run:
-#           name: Install tar and zip
-#           command: yum -y install tar gzip
-#       - run:
-#           name: Ensure back-end infrastructure exists
-#           command: |
-#             aws cloudformation deploy \
-#               --template-file .circleci/files/backend.yml \
-#               --tags project=project=my-backend-${CIRCLE_WORKFLOW_ID:0:7}  \
-#               --stack-name "my-backend-${CIRCLE_WORKFLOW_ID:0:7}" \
-#               --parameter-overrides ID="${CIRCLE_WORKFLOW_ID:0:7}"  
-#       - run:
-#           name: Ensure front-end infrastructure exist
-#           command: |
-#             aws cloudformation deploy \
-#               --template-file .circleci/files/frontend.yml \
-#               --tags project=my-frontend-${CIRCLE_WORKFLOW_ID:0:7} \
-#               --stack-name "my-frontend-${CIRCLE_WORKFLOW_ID:0:7}" \
-#               --parameter-overrides ID="${CIRCLE_WORKFLOW_ID:0:7}"
-#               exit 1
-#       - run:
-#           name: Send backend IP to memstash
-#           command: |
-#             pwd
-#             BACKEND_IP=$(aws ec2 describe-instances \
-#               --query 'Reservations[*].Instances[*].PublicIpAddress' \
-#               --filters "Name=tag:project,Values=my-backend-${CIRCLE_WORKFLOW_ID:0:7}" \
-#               --output text)
-#             echo "BACKEND_IP=${BACKEND_IP}"
-#             curl -H "Content-Type: text/plain" -H "token: 7079126b-54c1-4ae1-b7cf-577d8a27c76f" --request PUT --data "$BACKEND_IP" https://api.memstash.io/values/BACKEND_IP_${CIRCLE_WORKFLOW_ID:0:7}
-#       - run:
-#           name: Adding backend ip to ansible
-#           command: |
-#             pwd
-#             BACKEND_IP=$(curl -H "token: 7079126b-54c1-4ae1-b7cf-577d8a27c76f" --request GET https://api.memstash.io/values/BACKEND_IP_${CIRCLE_WORKFLOW_ID:0:7})
-#             echo ${BACKEND_IP} >> ./.circleci/ansible/inventory.txt
-#             cat ./.circleci/ansible/inventory.txt
-#       - persist_to_workspace:
-#           root: .
-#           paths:
-#             - ./.circleci/ansible/inventory.txt
-#       - destroy-environment:
-#           myWorkFlowId: ${CIRCLE_WORKFLOW_ID:0:7}  
+  deploy-infrastructure:
+    docker:
+      - image: cimg/base:stable
+    steps:
+      - checkout
+      - install_aws_cli
+      - run:
+          name: Ensure back-end infrastructure exists
+          command: |
+            aws cloudformation deploy \
+              --template-file .circleci/files/backend.yml \
+              --tags project=my-backend  \
+              --stack-name "my-backend-${CIRCLE_WORKFLOW_ID:0:7}" \
+              --parameter-overrides ID="${CIRCLE_WORKFLOW_ID:0:7}"  
+      - run:
+          name: Ensure front-end infrastructure exist
+          command: |
+            aws cloudformation deploy \
+              --template-file .circleci/files/frontend.yml \
+              --tags project=my-frontend \
+              --stack-name "my-frontend-${CIRCLE_WORKFLOW_ID:0:7}" \
+              --parameter-overrides ID="${CIRCLE_WORKFLOW_ID:0:7}"
+      - run:
+          name: Send backend IP to memstash
+          command: |
+            pwd
+            BACKEND_IP=$(aws ec2 describe-instances \
+              --query 'Reservations[*].Instances[*].PublicIpAddress' \
+              --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" \
+              --output text)
+            echo ${BACKEND_IP} >> .circleci/ansible/inventory.txt
+            cat .circleci/ansible/inventory.txt
+      - persist_to_workspace:
+          root: ~/
+          paths:
+            - ./.circleci/ansible/inventory.txt
+      # - destroy-environment:
+      #     myWorkFlowId: ${CIRCLE_WORKFLOW_ID:0:7}  
   
 #   configure-infrastructure:
 #     docker:
@@ -456,6 +465,7 @@ jobs:
           event: pass
           channel: 02-general
           template: success_tagged_deployment_1
+          
 workflows:
   default:
     jobs:
@@ -475,11 +485,11 @@ workflows:
             - test-backend
             - scan-backend
             - scan-frontend
-      # - deploy-infrastructure:
-      #     requires: [test-frontend, test-backend, scan-frontend, scan-backend]
-      #     filters:
-      #       branches:
-      #         only: [master]
+      - deploy-infrastructure:
+          requires: [test-frontend, test-backend, scan-frontend, scan-backend]
+          filters:
+            branches:
+              only: [master]
       # - configure-infrastructure:
       #     requires: [deploy-infrastructure]
       # - run-migrations:
