--- a/.circleci/ansible/configure-server.yml
+++ b/.circleci/ansible/configure-server.yml
@@ -18,17 +18,12 @@
         delay: 0
         timeout: 600
 
-  # Get the environment variables from CircleCI and add to the EC2 instance
-  environment:
-    ENVIRONMENT: "{{ lookup('env', 'ENVIRONMENT') }}"
-    TYPEORM_CONNECTION: "{{ lookup('env', 'TYPEORM_CONNECTION') }}"
-    TYPEORM_ENTITIES: "{{ lookup('env', 'TYPEORM_ENTITIES') }}"
-    TYPEORM_HOST: "{{ lookup('env', 'TYPEORM_HOST') }}"
-    TYPEORM_PORT: "{{ lookup('env', 'TYPEORM_PORT') }}"
-    TYPEORM_USERNAME: "{{ lookup('env', 'TYPEORM_USERNAME') }}"
-    TYPEORM_PASSWORD: "{{ lookup('env', 'TYPEORM_PASSWORD') }}"
-    TYPEORM_DATABASE: "{{ lookup('env', 'TYPEORM_DATABASE') }}"
+    - name: "install python for ansible"
+      become: true
+      raw: test -e /usr/bin/python3 || (abt -y update && apt install -y python3)
+      changed_when: false
 
+    - setup:  
   roles:
     - configure-server
     - configure-prometheus-node-exporter
