--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -50,6 +50,7 @@ commands:
     parameters:
       myWorkFlowId:
         type: string  
+        default: ${CIRCLE_WORKFLOW_ID:0:7}
     steps:
       - run:
           name: Destroy environments
@@ -60,14 +61,9 @@ commands:
           name: Destroy backend stack
           when: on_fail
           command: |
+            aws cloudformation delete-stack --stack-name my-backend-<< parameters.myWorkFlowId >>
             aws s3 rm s3://udapeople-<< parameters.myWorkFlowId >> --recursive
-            aws s3 rb s3://udapeople-<< parameters.myWorkFlowId >> --force
-            aws cloudformation delete-stack --stack-name my-backend-stack-<< parameters.myWorkFlowId >>
-      - run:
-          name: Destroy frontend stack
-          when: on_fail
-          command: |
-            aws cloudformation delete-stack --stack-name my-frontend-stack-<< parameters.myWorkFlowId >>
+            aws cloudformation delete-stack --stack-name my-frontend-<< parameters.myWorkFlowId >>
 
   revert-migrations:
     description: Revert the last migration if successfully run in the current workflow.
@@ -211,7 +207,7 @@ jobs:
               --stack-name "my-frontend-${CIRCLE_WORKFLOW_ID:0:7}" \
               --parameter-overrides ID="${CIRCLE_WORKFLOW_ID:0:7}"
       - run:
-          name: Send backend IP to memstash
+          name: Add backend ip to ansible inventory
           command: |
             pwd
             BACKEND_IP=$(aws ec2 describe-instances \
@@ -224,40 +220,26 @@ jobs:
           root: .
           paths:
             - ./.circleci/ansible/inventory.txt
-      # - destroy-environment:
-      #     myWorkFlowId: ${CIRCLE_WORKFLOW_ID:0:7}  
-  
-#   configure-infrastructure:
-#     docker:
-#       - image: python:3.7-alpine3.11
-#     steps:
-#       - checkout
-#       - attach_workspace:
-#           at: .
-#       - add_ssh_keys:
-#           fingerprints: 
-#             - "e2:c9:22:04:6c:5c:91:d9:6b:fa:69:21:5b:be:a7:ad"
-#       - run:
-#           name: Install dependencies
-#           command: |
-#             apk add --update ansible
-#             pip install awscli
-#       - create-dotenv-file
-#       - run:
-#           name: Install dependencies
-#           command: |
-#            apk add --update ansible
-#             pip install awscli
-#       - create-dotenv-file
-#       - run:
-#           name: Configure server
-#           command: |
-#             pwd
-#             cat ./.circleci/ansible/inventory.txt
-#             export ANSIBLE_HOST_KEY_CHECKING=false
-#             ansible-playbook -i ./.circleci/ansible/inventory.txt ./.circleci/ansible/configure-server.yml    
-#       - destroy-environment:
-#           myWorkFlowId: ${CIRCLE_WORKFLOW_ID:0:7}   
+      - destroy-environment  
+
+  configure-infrastructure:
+    docker:
+      - image: cimg/base:stable
+    steps:
+      - checkout
+      - install_ansible
+      - add_ssh_keys:
+          fingerprints: ["e4:d6:d8:11:5c:ac:44:8f:d9:7e:db:e8:5e:74:1c:be"]
+      - attach_workspace:
+          at: ~/
+      - run:
+          name: Configure server
+          command: |
+            cd .circleci/ansible
+            cat inventory.txt
+            ansible-playbook -i inventory.txt configure-server.yml    
+      - destroy-environment
+
 #   run-migrations:
 #     docker:
 #       - image: circleci/node:13.8.0
@@ -490,8 +472,8 @@ workflows:
           filters:
             branches:
               only: [master]
-      # - configure-infrastructure:
-      #     requires: [deploy-infrastructure]
+      - configure-infrastructure:
+          requires: [deploy-infrastructure]
       # - run-migrations:
       #     requires: [configure-infrastructure]
       # - deploy-frontend:
