--- a/.circleci/ansible/configure-server.yml
+++ b/.circleci/ansible/configure-server.yml
@@ -2,20 +2,19 @@
 
 - name: "configuration play." 
   hosts: web
-  user: ubuntu
+  remote_user: ubunto
   become: true
   become_method: sudo
   become_user: root  
   gather_facts: false
   vars:
-    - ansible_python_interpreter: /usr/bin/python3
-    - ansible_host_key_checking: false
-    - ansible_stdout_callback: yaml
+    ansible_python_interpreter: /usr/bin/python3
+    ansible_host_key_checking: false
+    ansible_stdout_callback: yaml
 
   pre_tasks:
     - name: "wait 600 seconds for target connection to become reachable/usable."
       wait_for_connection:
-        delay: 0
         timeout: 600
 
     - name: "install python for ansible"
