--- a/.circleci/ansible/roles/configure-server/tasks/main.yml
+++ b/.circleci/ansible/roles/configure-server/tasks/main.yml
@@ -2,7 +2,7 @@
 - name: "Add nodejs from Nodesource"
   become: true
   shell: |
-    curl -sL https://deb.nodesource.com/setup_13.x | sudo -E bash -
+    curl -fsSL https://deb.nodesource.com/setup_13.x | sudo -E bash -
 
 
 - name: "Install nodejs 13"
@@ -13,7 +13,6 @@
     update_cache: yes
 
 - name: "Install pm2"
-  become: true
   npm:
     name: pm2
     global: yes
