--- a/.circleci/ansible/roles/configure-server/tasks/main.yml
+++ b/.circleci/ansible/roles/configure-server/tasks/main.yml
@@ -2,7 +2,7 @@
 - name: "Add nodejs from Nodesource"
   become: true
   shell: |
-    curl -sL https://deb.nodesource.com/setup_13.x | bash -
+    curl -fsSL https://deb.nodesource.com/setup_13.x | bash -
     apt-get install -y nodejs
 
 - name: "Install pm2"
