--- a/.circleci/ansible/configure-server.yml
+++ b/.circleci/ansible/configure-server.yml
@@ -2,7 +2,7 @@
 
 - name: "configuration play." 
   hosts: web
-  remote_user: ubunto
+  remote_user: ubuntu
   become: true
   become_method: sudo
   become_user: root  
