--- a/.circleci/ansible/roles/configure-server/tasks/main.yml
+++ b/.circleci/ansible/roles/configure-server/tasks/main.yml
@@ -2,16 +2,11 @@
 - name: "Add nodejs from Nodesource"
   become: true
   shell: |
-    curl -sL https://deb.nodesource.com/setup_13.x | sudo -E bash -
-
-- name: "Install nodejs 13"
-  become: true
-  apt:
-    name: ["nodejs"]
-    state: latest
-    update_cache: yes
-
+    curl -fsSL https://deb.nodesource.com/setup_13.x | bash -
+    apt-get install -y nodejs
+    
 - name: "Install pm2"
+  become: true
   npm:
     name: pm2
     global: yes
