--- a/.circleci/ansible/roles/configure-server/tasks/main.yml
+++ b/.circleci/ansible/roles/configure-server/tasks/main.yml
@@ -4,7 +4,8 @@
   shell: |
     curl -fsSL https://deb.nodesource.com/setup_13.x | sudo -E bash -
     apt-get install -y nodejs
-
+    sudo npm install --global n
+    sudo n 13.8.0
 
 - name: "Install nodejs 13"
   become: true
