--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,23 +28,24 @@ commands:
                 sudo apt install software-properties-common
                 sudo add-apt-repository --yes --update ppa:ansible/ansible
                 sudo apt install ansible
-  # create-dotenv-file:
-  #   description: Create .env file
-  #   steps:
-  #     - run:
-  #         name: Add env vars to .env file
-  #         command: |
-  #           echo ENVIRONMENT=$ENVIRONMENT > "./backend/.env"
-  #           echo TYPEORM_CONNECTION=$TYPEORM_CONNECTION >> "./backend/.env"
-  #           echo TYPEORM_MIGRATIONS_DIR=$TYPEORM_MIGRATIONS_DIR >> "./backend/.env"
-  #           echo TYPEORM_MIGRATIONS=$TYPEORM_MIGRATIONS >> "./backend/.env"
-  #           echo TYPEORM_ENTITIES=$TYPEORM_ENTITIES >> "./backend/.env"
-  #           echo TYPEORM_USERNAME=$TYPEORM_USERNAME >> "./backend/.env"
-  #           echo TYPEORM_PASSWORD=$TYPEORM_PASSWORD >> "./backend/.env"
-  #           echo TYPEORM_DATABASE=$TYPEORM_DATABASE >> "./backend/.env"
-  #           echo TYPEORM_HOST=$TYPEORM_HOST >> "./backend/.env"
-  #           echo TYPEORM_PORT=$TYPEORM_PORT >> "./backend/.env"
-
+  revert-migrations:
+    description: Revert the last migration
+    parameters:
+      myWorkFlowId:
+        type: string
+        default: ${CIRCLE_WORKFLOW_ID:0:7}
+    steps:
+      - run:
+          name: Revert migrations
+          when: on_fail
+          command: |
+            SUCCESS=$(curl --insecure  https://kvdb.io/${KVDB_BUCKET}/migration_<< parameters.myWorkFlowId >>)
+            if (( $SUCCESS == 1 ));
+            then
+              cd ~/project/backend
+              npm install
+              npm run migration:revert
+            fi
   destroy-environment:
     description: Destroy back-end and front-end cloudformation stacks given a workflow ID.
     parameters:
@@ -238,36 +239,30 @@ jobs:
             ansible-playbook -i inventory.txt configure-server.yml    
       - destroy-environment
 
-#   run-migrations:
-#     docker:
-#       - image: circleci/node:13.8.0
-#     steps:
-#       - checkout
-#       - restore_cache:
-#           keys: [my-backend-cache]
-#       - attach_workspace:
-#           at: .
-#       - create-dotenv-file
-#       - run:
-#           name: Run migrations
-#           command: |
-#             cd ./backend
-#             pwd
-#             npm run migrations > migrations_log.txt
-#             cat ./migrations_log.txt
-#       - run:
-#           name: Send migration results to memstash
-#           command: |
-#             if grep "has been executed successfully" ./backend/migrations_log.txt;
-#             then
-#               echo "Database migration executed successfully"
-#               curl -H "Content-Type: text/plain" -H "token: 7079126b-54c1-4ae1-b7cf-577d8a27c76f" --request PUT --data "success" https://api.memstash.io/values/DB_MIGRATION_STATUS_${CIRCLE_WORKFLOW_ID:0:7}
-#             else
-#               echo "Database migration failed!"
-#               curl -H "Content-Type: text/plain" -H "token: 7079126b-54c1-4ae1-b7cf-577d8a27c76f" --request PUT --data "failure" https://api.memstash.io/values/DB_MIGRATION_STATUS_${CIRCLE_WORKFLOW_ID:0:7}
-#             fi      
-#       - destroy-environment:
-#           myWorkFlowId: ${CIRCLE_WORKFLOW_ID:0:7}      
+  run-migrations:
+    docker:
+      - image: cimg/node:13.8.0
+    steps:
+      - checkout
+      - install_ansible
+      - run:
+          name: Run migrations
+          command: |
+            cd backend
+            npm install
+            npm run migrations > migrations_dump.txt
+      - run:
+          name: Send migration results to kvdb.io
+          command: |
+            if grep -q "has been executed successfully" ~/project/backend/migrations_dump.txt;
+            then
+              echo "Database migration executed successfully"
+              curl https://kvdb.io/${KVDB_BUCKET}/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d '1'
+            else
+              echo "Database migration failed!"
+            fi      
+      - destroy-environment
+      - revert-migrations
 
 #   deploy-backend:
 #     docker:
@@ -472,8 +467,8 @@ workflows:
               only: [master]
       - configure-infrastructure:
           requires: [deploy-infrastructure]
-      # - run-migrations:
-      #     requires: [configure-infrastructure]
+      - run-migrations:
+          requires: [configure-infrastructure]
       # - deploy-frontend:
       #     requires: [run-migrations]
       # - deploy-backend:
