--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,7 +19,7 @@ commands:
                 curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
                 unzip awscliv2.zip
                 sudo ./aws/install
-                
+
   install_ansible:
     description: Install Ansible
     steps: 
@@ -226,7 +226,7 @@ jobs:
       - image: cimg/node:13.8.0
     steps:
       - checkout
-      - install_ansible
+      - install_aws_cli
       - run:
           name: Run migrations
           command: |
