--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -231,7 +231,7 @@ jobs:
           name: Run migrations
           command: |
             cd backend
-            npm install
+            npm rebuild
             npm run migrations > migrations_dump.txt
       - run:
           name: Send migration results to kvdb.io
