--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -227,11 +227,13 @@ jobs:
     steps:
       - checkout
       - install_aws_cli
+      - restore_cache:
+        keys: [my-backend-cache]
       - run:
           name: Run migrations
           command: |
             cd backend
-            npm rebuild
+            npm install
             npm run migrations > migrations_dump.txt
       - run:
           name: Send migration results to kvdb.io
