ADD build frontend
Signed-off-by: Mahmoud Mamdouh <mahmoud.mamdouh@khazna.app>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,6 +10,17 @@ commands:
           channel: 02-general
           template: basic_fail_1
 
+  install_nodejs:
+    description: Install Node.js 13
+    steps:
+      - run:
+          name: Install Node.js 13
+          command: |
+            curl -fsSL https://deb.nodesource.com/setup_13.x | sudo -E bash -
+            sudo apt install -y nodejs
+            sudo npm install --global n
+            sudo n 13.8.0
+            
   install_aws_cli:
     description: Install AWS CLI
     steps: 
@@ -27,9 +38,9 @@ commands:
             name: Install Ansible
             command: |
                 sudo apt update
-                sudo apt install software-properties-common
+                sudo apt install software-properties-common -y
                 sudo add-apt-repository --yes --update ppa:ansible/ansible
-                sudo apt install ansible
+                sudo apt install ansible -y
   revert-migrations:
     description: Revert the last migration
     parameters:
@@ -282,47 +293,37 @@ jobs:
 #       - revert-migrations:
 #           myWorkFlowId: ${CIRCLE_WORKFLOW_ID:0:7}  
   
-#   deploy-frontend:
-#     docker:
-#       - image: amazon/aws-cli
-#     steps:
-#       - checkout
-#       - run:
-#           name: Install dependencies
-#           command: |
-#             yum install -y tar gzip curl
-#             curl -sL https://rpm.nodesource.com/setup_10.x | bash -
-#             yum install -y nodejs
-#       - attach_workspace:
-#           at: .
-#       - run:
-#           name: Get backend url
-#           command: |
-#             BACKEND_IP=$(curl -H "token: 7079126b-54c1-4ae1-b7cf-577d8a27c76f" --request GET https://api.memstash.io/values/BACKEND_IP_${CIRCLE_WORKFLOW_ID:0:7})
-#             export API_URL="http://${BACKEND_IP}:3030"
-#             echo "${API_URL}"
-#             echo ENVIRONMENT=production > "frontend/.env"
-#             echo API_URL=${API_URL} >> "frontend/.env"
-#             cat frontend/.env
-#       - run:
-#           name: Build frontend
-#           command: |
-#             cd ./frontend
-#             pwd
-#             npm i
-#             npm run build
-#       - run:
-#           name: Deploy frontend objects
-#           command: |
-#             aws s3 cp ./frontend/dist "s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7}" --recursive
-#       - persist_to_workspace:
-#           root: .
-#           paths:
-#             - ./frontend/dist
-#       - destroy-environment:
-#           myWorkFlowId: ${CIRCLE_WORKFLOW_ID:0:7}
-#       - revert-migrations:
-#           myWorkFlowId: ${CIRCLE_WORKFLOW_ID:0:7}  
+  deploy-frontend:
+    docker:
+      - image: cimg/base:stable
+    steps:
+      - checkout
+      - install_awscli
+      - install_nodejs
+      - restore_cache:
+          keys: [my-frontend-cache]
+      - run:
+          name: Install dependencies
+          command: |
+            cd frontend
+            npm install
+      - run:
+          name: Get backend url
+          command: |
+            BACKEND_IP=$(aws ec2 describe-instances \
+              --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" \
+              --query 'Reservations[*].Instances[*].PublicIpAddress' \
+              --output text)
+            echo "API_URL=http://${BACKEND_IP}:3030" >> frontend/.env
+            cat frontend/.env
+      - run:
+          name: Build frontend
+          command: |
+            cd frontend
+            npm run build
+            aws s3 cp dist s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7} --recursive
+      - destroy-environment
+      - revert-migrations
 
 
 #   smoke-test:
@@ -454,8 +455,8 @@ workflows:
           requires: [deploy-infrastructure]
       - run-migrations:
           requires: [configure-infrastructure]
-      # - deploy-frontend:
-      #     requires: [run-migrations]
+      - deploy-frontend:
+          requires: [run-migrations]
       # - deploy-backend:
       #     requires: [run-migrations]
       # - smoke-test:
