--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -1,27 +1,31 @@
 ---
-- name: Upgrade npm
-  become: true
-  shell: |
-    npm install -g npm@latest
-- name: Copy compiled files
-  unarchive:
-    src: /root/project/backend.tar.gz
-    dest: /home/ubuntu/
+- name: "backend app directory Creation"
+  file:
+    path: ~/backend-app
+    state: directory
 
-- name: Build backend
-  ignore_errors: yes
+- name: "Unarchiving back-end files"
+  unarchive:
+    src: artifact.tar.gz
+    dest: ~/backend-app
+
+- name: "Install Nodejs Dependencies"
   shell: |
-    cd /home/ubuntu/backend
+    cd ~/backend-app
     npm i
-    npm run build
-- name: Stop and delete already running server
-  ignore_errors: yes
+
+- name: "Execute Nodejs app with pm2"
   shell: |
-    pm2 stop backend
-    pm2 delete backend
-- name: Start server
-  become: true
+    cd ~/backend-app/dist
+    pm2 stop default
+    pm2 start main.js
+  register: execute_node
+
+- name: stdout
+  debug:
+    msg: "{{ execute_node.stdout_lines }}"
+
+- name: "Configuring pm2 to start as a service"
   shell: |
-    cd /home/ubuntu/backend
-    pm2 start npm --name backend -- start
-    pm2 ls
+    sudo su -c "env PATH=$PATH:/usr/local/bin pm2 startup systemd -u ubuntu --hp /home/ubuntu"
+    pm2 save
