--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -260,38 +260,44 @@ jobs:
       - revert-migrations
 
 
-#   deploy-backend:
-#     docker:
-#       - image: python:3.7-alpine3.11
-#     steps:
-#       - checkout
-#       - add_ssh_keys:
-#           fingerprints: 
-#             - "e2:c9:22:04:6c:5c:91:d9:6b:fa:69:21:5b:be:a7:ad"
-#       - attach_workspace:
-#           at: .
-#       - restore_cache:
-#           keys: [my-backend-cache]
-#       - run:
-#           name: Install dependencies
-#           command: |
-#             apk add --update ansible
-#             apk add --no-cache curl
-#             apk add --no-cache openssh-client
-#             apk add --no-cache --upgrade bash
-#             pip install awscli
-#       - create-dotenv-file
-#       - run:
-#           name: Deploy backend
-#           command: |
-#             pwd
-#             tar czf backend.tar.gz backend/
-#             export ANSIBLE_HOST_KEY_CHECKING=false
-#             ansible-playbook -i ./.circleci/ansible/inventory.txt ./.circleci/ansible/deploy-backend.yml -vvv
-#       - destroy-environment:
-#           myWorkFlowId: ${CIRCLE_WORKFLOW_ID:0:7}
-#       - revert-migrations:
-#           myWorkFlowId: ${CIRCLE_WORKFLOW_ID:0:7}  
+  deploy-backend:
+    docker:
+      - image: cimg/base:stable
+    steps:
+      - checkout
+      - install_aws_cli
+      - install_ansible
+      - install_nodejs
+      - add_ssh_keys:
+          fingerprints: ["e4:d6:d8:11:5c:ac:44:8f:d9:7e:db:e8:5e:74:1c:be"]
+      - attach_workspace:
+          at: ~/
+      - restore_cache:
+          keys: [my-backend-cache]
+      - run:
+          name: Install dependencies
+          command: |
+            cd packend
+            npm install
+      - run:
+          name: Deploy backend
+          command: |
+            cd backend
+            npm run build
+            tar -czf artifact.tar.gz dist/* package*
+            cd ..
+            cp backend/artifact.tar.gz .circleci/ansible/roles/deploy/files
+      - run:
+          name: Deploy backend
+          command: |
+            export TYPEORM_ENTITIES=./modules/domain/**/*.entity{.ts,.js}
+            export TYPEORM_MIGRATIONS_DIR=./migrations
+            export TYPEORM_MIGRATIONS=./migrations/*.ts
+            cd .circleci/ansible
+            cat inventory.txt
+            ansible-playbook -i inventory.txt deploy-backend.yml
+      - destroy-environment
+      - revert-migrations
   
   deploy-frontend:
     docker:
@@ -457,8 +463,8 @@ workflows:
           requires: [configure-infrastructure]
       - deploy-frontend:
           requires: [run-migrations]
-      # - deploy-backend:
-      #     requires: [run-migrations]
+      - deploy-backend:
+          requires: [run-migrations]
       # - smoke-test:
       #     requires: [deploy-backend, deploy-frontend]
       # - cloudfront-update:
