--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -277,7 +277,7 @@ jobs:
       - run:
           name: Install dependencies
           command: |
-            cd packend
+            cd backend
             npm install
       - run:
           name: Deploy backend
