--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -331,39 +331,39 @@ jobs:
       - destroy-environment
       - revert-migrations
 
-
-#   smoke-test:
-#     docker:
-#       - image: alpine:latest  
-#     steps:
-#       - checkout
-#       - attach_workspace:
-#           at: .
-#       - run:
-#           name: Install dependencies
-#           command: |
-#             apk --no-cache add curl
-#             apk add --update npm
-#             apk add --no-cache python3 py3-pip \
-#               && pip3 install --upgrade pip \
-#               && pip install awscli
-#       - create-dotenv-file
-#       - run:
-#           name: Backend smoke test.
-#           command: |
-#             BACKEND_IP=$(curl -H "token: 7079126b-54c1-4ae1-b7cf-577d8a27c76f" --request GET https://api.memstash.io/values/BACKEND_IP_${CIRCLE_WORKFLOW_ID:0:7})
-#             API_URL="http://${BACKEND_IP}:3030"
-#             echo "${API_URL}"
-#             curl -s "${API_URL}/api/status" -v
-#       - run:
-#           name: Frontend smoke test.
-#           command: |
-#             URL="http://udapeople-${CIRCLE_WORKFLOW_ID:0:7}.s3-website-us-west-2.amazonaws.com"
-#             curl -s ${URL} | grep "Welcome"
-#       - destroy-environment:
-#           myWorkFlowId: ${CIRCLE_WORKFLOW_ID:0:7}
-#       - revert-migrations:
-#           myWorkFlowId: ${CIRCLE_WORKFLOW_ID:0:7}  
+  smoke-test:
+    docker:
+      - image: cimg/base:stable
+    steps:
+      - checkout
+      - install_aws_cli
+      - install_nodejs
+      - run:
+          name: Backend smoke testing
+          command: |
+            BACKEND_IP=$(aws ec2 describe-instances \
+              --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" \
+              --query 'Reservations[*].Instances[*].PublicIpAddress' \
+              --output text)
+            export API_URL=http://${BACKEND_IP}:3030
+            if curl -s $API_URL/api/status | grep "ok"
+            then
+              exit 0
+            else
+              exit 1
+            fi
+      - run:
+          name: Frontend smoke testing
+          command: |
+            FRONTEND_WEBSITE=http://udapeople-${CIRCLE_WORKFLOW_ID:0:7}.s3-website.${AWS_DEFAULT_REGION}.amazonaws.com
+            if curl -s $FRONTEND_WEBSITE | grep "Welcome"
+            then
+              exit 1
+            else
+              exit 2
+            fi
+      - destroy-environment
+      - revert-migrations
 
 #   cloudfront-update:
 #     docker:
@@ -465,8 +465,8 @@ workflows:
           requires: [run-migrations]
       - deploy-backend:
           requires: [run-migrations]
-      # - smoke-test:
-      #     requires: [deploy-backend, deploy-frontend]
+      - smoke-test:
+          requires: [deploy-backend, deploy-frontend]
       # - cloudfront-update:
       #     requires: [smoke-test]
       # - cleanup:
