update key value tags
Signed-off-by: Mahmoud Mamdouh <mahmoud.mamdouh@khazna.app>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -168,7 +168,7 @@ jobs:
           name: Scan backend
           command: |
             cd backend
-            npm i
+            npm i --no-audit
             npm audit fix --force --audit-level=critical
             npm audit fix --force --audit-level=critical
             npm audit fix --force --audit-level=critical
