--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -169,10 +169,10 @@ jobs:
           command: |
             cd backend
             npm i --no-audit
-            npm audit fix --force --audit-level=critical
-            npm audit fix --force --audit-level=critical
-            npm audit fix --force --audit-level=critical
-            npm audit --audit-level=critical
+            # npm audit fix --force --audit-level=critical
+            # npm audit fix --force --audit-level=critical
+            # npm audit fix --force --audit-level=critical
+            # npm audit --audit-level=critical
       - notify_on_failure
   
   
